--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "firebase": "^7.1.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuexfire": "^3.1.2"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.4.4",
